# exview2

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  version.h
modules/: .gitignore  Makefile.am  ev2_macros.h
modules/elf/: Makefile.am  elf_parser.c  elf_parser.h
po/: .gitignore  Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  (+61 more)
settings/: .gitignore  Makefile.am  exview2.gschema.xml
src/: .gitignore  Makefile.am  ev2_application.c  ev2_application.h  ev2_context.vala  ev2_main.c  ev2_message.h  ev2_message.vala  ev2_module.c  ev2_module.h  ev2_module_manager.c  ev2_module_manager.h  ev2_module_self.c  ev2_parser.c  ev2_parser.h  ev2_preferences.vala  ev2_settings.h  ev2_settings.vala  ev2_settings_connector.c  ev2_settings_connector.h  ev2_view_context.h  ev2_view_context.vala  ev2_view_context_patch.c  ev2_view_context_patch.h  ev2_window.vala
src/application/: .gitignore  Makefile.am  org.hck.exview2.desktop.in.in
src/modules/: Makefile.am  ev2_macros.h
src/modules/elf/: Makefile.am  elf_parse_dyninfo.c  elf_parse_header.c  elf_parse_phents.c  elf_parse_shents.c  elf_parse_symbols.c  elf_parser.c  elf_parser.h  elf_strings.c  elf_structs.h  elf_utils.c
src/modules/pe/: Makefile.am  pe_parse_exports.c  pe_parse_headers.c  pe_parse_imports.c  pe_parse_sections.c  pe_parser.c  pe_parser.h  pe_strings.c  pe_structs.h  pe_utils.c
src/resources/: .gitignore  Makefile.am  ev_resources.gresources.xml
src/resources/ui/: .gitignore  message.ui  prefblock.ui  preferences.ui  window.ui
vapi/: Makefile.am  config.vapi  exview2.vapi
